kompose/pdf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f pdf.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: pdf
    traefik.constraint-label: traefik-public
    traefik.docker.network: traefik-public
    traefik.enable: "true"
    traefik.http.routers.pdf-http.entrypoints: http
    traefik.http.routers.pdf-http.middlewares: https-redirect
    traefik.http.routers.pdf-http.rule: Host(`pdf.vnerd.nl`)
    traefik.http.routers.pdf-https.entrypoints: https
    traefik.http.routers.pdf-https.rule: Host(`pdf.vnerd.nl`)
    traefik.http.routers.pdf-https.tls: "true"
    traefik.http.routers.pdf-https.tls.certresolver: le
    traefik.http.services.pdf.loadbalancer.server.port: "8080"
  name: pdf
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pdf
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f pdf.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: pdf
    spec:
      containers:
        - env:
            - name: PGID
              value: "911"
            - name: PUID
              value: "911"
            - name: TZ
              value: Europe/Amsterdam
          image: frooodle/s-pdf:latest
          name: pdf
          volumeMounts:
            - mountPath: /usr/share/tesseract-ocr/4.00/tessdata
              name: pdf-claim0
            - mountPath: /configs
              name: pdf-claim1
      restartPolicy: Always
      volumes:
        - name: pdf-claim0
          persistentVolumeClaim:
            claimName: pdf-claim0
        - name: pdf-claim1
          persistentVolumeClaim:
            claimName: pdf-claim1
