kompose/traefik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f traefikv3.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: traefik
    traefik.constraint-label: traefik-public
    traefik.docker.network: traefik-public
    traefik.enable: "true"
    traefik.http.middlewares.admin-auth.basicauth.users: admin:.
    traefik.http.middlewares.https-redirect.redirectscheme.permanent: "true"
    traefik.http.middlewares.https-redirect.redirectscheme.scheme: https
    traefik.http.routers.traefik-public-http.entrypoints: http
    traefik.http.routers.traefik-public-http.middlewares: https-redirect
    traefik.http.routers.traefik-public-http.rule: Host(`traefikv3.vnerd.nl`)
    traefik.http.routers.traefik-public-https.entrypoints: https
    traefik.http.routers.traefik-public-https.middlewares: authelia@swarm
    traefik.http.routers.traefik-public-https.rule: Host(`traefikv3.vnerd.nl`)
    traefik.http.routers.traefik-public-https.service: api@internal
    traefik.http.routers.traefik-public-https.tls: "true"
    traefik.http.routers.traefik-public-https.tls.certresolver: le
    traefik.http.services.traefik-public.loadbalancer.server.port: "8080"
  name: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: traefik
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f traefikv3.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: traefik
    spec:
      containers:
        - args:
            - --providers.docker
            - --providers.docker.exposedbydefault=false
            - --providers.swarm.endpoint=unix:///var/run/docker.sock
            - --providers.swarm.exposedByDefault=false
            - --providers.swarm.network=traefik-public
            - --entrypoints.http.address=:80
            - --entrypoints.https.address=:443
            - --entrypoints.rdp.address=:3389
            - --entrypoints.teleport3025.address=:3025
            - --entryPoints.http.forwardedHeaders.insecure=true
            - --entryPoints.https.forwardedHeaders.insecure=true
            - --entryPoints.rdp.forwardedHeaders.insecure=true
            - --certificatesresolvers.le.acme.email=karam.ajaj@hotmail.com
            - --certificatesresolvers.le.acme.storage=/certificates/acme.json
            - --certificatesresolvers.le.acme.tlschallenge=true
            - --serverstransport.insecureskipverify=true
            - --providers.docker.allowEmptyServices=true
            - --accesslog=true
            - --accesslog.addinternals
            - --log
            - --api
            - --providers.file.directory=/dynamic-config
            - --providers.file.watch=true
            - --experimental.plugins.sablier.modulename=github.com/acouvreur/sablier
            - --experimental.plugins.sablier.version=v1.5.0
            - --experimental.plugins.staticresponse.modulename=github.com/jdel/staticresponse
            - --experimental.plugins.staticresponse.version=v0.0.1
            - --providers.kubernetesingress=true
            - --providers.kubernetesingress.endpoint=http://10.10.10.101:8080
          image: traefik:v3.0.0
          name: traefik
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 443
              protocol: TCP
            - containerPort: 3025
              protocol: TCP
            - containerPort: 3389
              protocol: TCP
          volumeMounts:
            - mountPath: /certificates
              name: traefik-claim0
            - mountPath: /dynamic-config
              name: traefik-claim1
            - mountPath: /static-config
              name: traefik-claim2
      restartPolicy: Always
      volumes:
        - name: traefik-claim0
          persistentVolumeClaim:
            claimName: traefik-claim0
        - name: traefik-claim1
          persistentVolumeClaim:
            claimName: traefik-claim1
        - name: traefik-claim2
          persistentVolumeClaim:
            claimName: traefik-claim2
