kompose/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f traefikv3.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: traefik
  name: traefik
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "443"
      port: 443
      targetPort: 443
    - name: "3025"
      port: 3025
      targetPort: 3025
    - name: "3389"
      port: 3389
      targetPort: 3389
  selector:
    io.kompose.service: traefik
