kompose/cv-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv-ingress
spec:
  rules:
  - host: "cv.vnerd.nl"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cv
            port:
              name: web
